--- a/.github/workflows/push-main.yml
+++ b/.github/workflows/push-main.yml
@@ -1,8 +1,8 @@
 on:
   push:
     branches:
-      - master
-name: Master Build/Deploy
+      - main
+name: Main Build/Deploy
 env:
   GCLOUD_PROJECT: ${{ secrets.GCLOUD_PROJECT }}
   GCLOUD_EMAIL: ${{ secrets.GCLOUD_EMAIL }}
