--- a/.github/workflows/push-main.yml
+++ b/.github/workflows/push-main.yml
@@ -31,7 +31,7 @@ jobs:
       - name: GitHub Docker Action
         uses: matootie/github-docker@v3.1.0
         with:
-          accessToken: ${{ secrets.GITHUB_TOKEN }}
+          accessToken: ${{ secrets.ACTIONS_TOKEN }}
           tag: |
             latest
             ${{ github.sha }}
