Add healthcheck endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ discordToken=
 ## MySQL DB
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
+## Healthcheck endpoint
+management.endpoints.web.exposure.include=info,health,metrics
