Actually add healthcheck endpoint

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,2 +1,6 @@
 ## Discord
 ocwServerId=109466144993210368
+## Healthcheck endpoint
+management.endpoint.health.show-details=always
+management.health.livenessstate.enabled=true
+management.health.readinessstate.enabled=true
