--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,3 +2,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/game_server_commander
 ## Discord
 ocwServerId=497444318768922633
+## Healthcheck endpoint
+management.endpoint.health.show-details=always
