Fixes for running within docker and dev env

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,6 @@
 ## MySQL
 spring.datasource.url=jdbc:mysql://localhost:3306/game_server_commander
-## Discord
-ocwServerId=497444318768922633
 ## Healthcheck endpoint
 management.endpoint.health.show-details=always
+## Docker
+dockerHost=tcp://localhost:2375
