--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 ## Discord
 discordToken=
+nincodedoUserId=86958766125244416
 ## MySQL DB
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
 ## Healthcheck endpoint
 management.endpoints.web.exposure.include=info,health,metrics
+## Logging
+logging.level.dev.nincodedo.ocwgameservercommander=TRACE
