Add startup banner

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.hibernate.ddl-auto=update
 management.endpoints.web.exposure.include=info,health,metrics
 ## Logging
 logging.level.dev.nincodedo.ocwgameservercommander=TRACE
+## Banner
+spring.banner.location=classpath:banner-ascii-art.txt
