--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,3 +4,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/game_server_commander
 management.endpoint.health.show-details=always
 ## Docker
 dockerHost=tcp://localhost:2375
+## Logging
+logging.level.dev.nincodedo.ocwgameservercommander=TRACE
