--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,3 +27,10 @@ jobs:
             ${{ runner.os }}-maven-
       - name: Build & Test
         run: ./mvnw clean verify --no-transfer-progress
+      - uses: docker/setup-buildx-action@v1
+        id: buildx
+        with:
+          install: true
+      - name: Docker Build
+        run: |
+          docker build .
