Add command interface

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 ## Discord
 discordToken=
-nincodedoUserId=86958766125244416
 ## MySQL DB
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto=update
@@ -10,3 +9,6 @@ management.endpoints.web.exposure.include=info,health,metrics
 logging.level.dev.nincodedo.ocwgameservercommander=INFO
 ## Banner
 spring.banner.location=classpath:banner-ascii-art.txt
+## OCW GSC
+ocwServerId=109466144993210368
+gameServerAdminId=86958766125244416
