--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,4 @@ spring.banner.location=classpath:banner-ascii-art.txt
 ## OCW GSC
 ocwServerId=109466144993210368
 gameServerAdminId=86958766125244416
+gameServerAdminName=Nincodedo
