--- a/pom.xml
+++ b/pom.xml
@@ -14,11 +14,11 @@
     <name>OCW Game Server Commander</name>
     <description>ocw-game-server-commander</description>
     <properties>
-        <java.version>17</java.version>
+        <java.version>19</java.version>
         <docker-java.version>3.2.14</docker-java.version>
         <lombok-mapstruct.version>0.1.0</lombok-mapstruct.version>
         <mapstruct.version>1.5.3.Final</mapstruct.version>
-        <JDA.version>5.0.0-alpha.22</JDA.version>
+        <JDA.version>5.0.0-beta.2</JDA.version>
     </properties>
     <dependencies>
         <dependency>
@@ -81,8 +81,8 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
         </dependency>
     </dependencies>
 
